# bookworm-lambda

./: .gitignore  README.md  bookworm-lambda.cabal  bookworm2.cabal  stack.yaml
sample/test_tiffs/: sample_001.tiff  sample_002.tiff  sample_003.tiff  sample_004.tiff  sample_005.tiff
src/: Bookworm.hs  Lib.hs
src/Bookworm/: ExpandPage.hs  Types.hs  Util.hs
superuser/: README.md  stack.yaml  superuser.cabal
superuser/src/: Superuser.hs
test/: Spec.hs
