name:                bookworm-lambda
version:             0.1.0.0
synopsis:            A terminal utility for automating book scan processing.
-- description:
homepage:            https://github.com/stallmanifold/bookworm-lambda
license:             Apache-2.0
license-file:        LICENSE-APACHE
author:              Stallmanifold
maintainer:          stallmanifold@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable bookworm-lambda-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bookworm-lambda
  default-language:    Haskell2010

test-suite bookworm-lambda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bookworm-lambda
                     , hspec >= 2.4.4
                     , QuickCheck >= 2.10
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stallmanifold/bookworm-lambda
